<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/layout_padding">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background_schema" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CalculatorActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scoreboard"
            style="@style/Scoreboard"
            app:layout_constraintEnd_toEndOf="@id/key_div"
            app:layout_constraintStart_toStartOf="@id/key_c"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1234567890" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_c"
            style="@style/Buttons.Strong.Red"
            android:text="@string/с"
            app:layout_constraintEnd_toStartOf="@id/key_percent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreboard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_percent"
            style="@style/Buttons"
            android:text="@string/percent"
            app:layout_constraintEnd_toStartOf="@+id/key_backspace"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/key_c"
            app:layout_constraintTop_toBottomOf="@id/scoreboard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_backspace"
            style="@style/Buttons"
            android:text="@string/backspace"
            app:layout_constraintEnd_toStartOf="@+id/key_div"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/key_percent"
            app:layout_constraintTop_toBottomOf="@id/scoreboard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            style="@style/Buttons.Strong"
            android:text="@string/key_1"
            app:layout_constraintEnd_toStartOf="@id/key_2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            style="@style/Buttons.Strong"
            android:text="@string/key_2"
            app:layout_constraintEnd_toStartOf="@id/key_3"
            app:layout_constraintStart_toEndOf="@+id/key_1"
            app:layout_constraintTop_toBottomOf="@id/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            style="@style/Buttons.Strong"
            android:text="@string/key_3"
            app:layout_constraintEnd_toStartOf="@+id/key_plus"
            app:layout_constraintStart_toEndOf="@id/key_2"
            app:layout_constraintTop_toBottomOf="@id/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_div"
            style="@style/Buttons"
            android:text="@string/key_div"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_backspace"
            app:layout_constraintTop_toBottomOf="@id/scoreboard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            style="@style/Buttons.Strong"
            android:text="@string/key_4"
            app:layout_constraintEnd_toStartOf="@id/key_5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/key_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            style="@style/Buttons.Strong"
            android:text="@string/key_5"
            app:layout_constraintEnd_toStartOf="@id/key_6"
            app:layout_constraintStart_toEndOf="@id/key_4"
            app:layout_constraintTop_toBottomOf="@id/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            style="@style/Buttons.Strong"
            android:text="@string/key_6"
            app:layout_constraintEnd_toStartOf="@+id/key_minus"
            app:layout_constraintStart_toEndOf="@id/key_5"
            app:layout_constraintTop_toBottomOf="@id/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_mul"
            style="@style/Buttons"
            android:text="@string/key_mul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_9"
            app:layout_constraintTop_toBottomOf="@id/key_div" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            style="@style/Buttons.Strong"
            android:text="@string/key_7"
            app:layout_constraintEnd_toStartOf="@id/key_8"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/key_c" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            style="@style/Buttons.Strong"
            android:text="@string/key_8"
            app:layout_constraintEnd_toStartOf="@id/key_9"
            app:layout_constraintStart_toEndOf="@id/key_7"
            app:layout_constraintTop_toBottomOf="@id/key_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            style="@style/Buttons.Strong"
            android:text="@string/key_9"
            app:layout_constraintEnd_toStartOf="@id/key_mul"
            app:layout_constraintStart_toEndOf="@id/key_8"
            app:layout_constraintTop_toBottomOf="@id/key_backspace" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            style="@style/Buttons.Strong"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/key_0"
            app:layout_constraintEnd_toEndOf="@+id/key_2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/key_1"
            app:layout_constraintTop_toBottomOf="@id/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_dot"
            style="@style/Buttons.Strong"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/key_dot"
            app:layout_constraintEnd_toEndOf="@+id/key_3"
            app:layout_constraintStart_toStartOf="@id/key_3"
            app:layout_constraintTop_toBottomOf="@id/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            style="@style/Buttons"
            android:text="@string/key_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_6"
            app:layout_constraintTop_toBottomOf="@id/key_mul" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            style="@style/Buttons"
            android:text="@string/key_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/key_3"
            app:layout_constraintTop_toBottomOf="@id/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_result"
            style="@style/Buttons"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/equal"
            app:layout_constraintEnd_toEndOf="@id/key_plus"
            app:layout_constraintStart_toStartOf="@+id/key_plus"
            app:layout_constraintTop_toBottomOf="@+id/key_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>